(executable
 (name      test)
 (libraries checkseum.ocaml digestif.ocaml test_git test_smart decompress
            fpath lwt))

(rule
 (alias runtest)
 (package git)
 (deps test.exe
       ../data/pack.idx ../data/pack.pack
       ../data/bomb.idx ../data/bomb.pack)
 (action (run ./test.exe -q --color=always)))
